# vixy

./: .dockerignore  .gitignore  AGENT.md  BLOG.md  Cargo.toml  DIARY.md  Dockerfile  INTEGRATION_TESTS.md  LICENSE  README.md  WEBSOCKET-RECONNECTION-FIX.md  config.example.toml  config.wss-test.toml  justfile
.claude/: settings.local.json
.github/workflows/: README.md  ci.yml  claude-review.yml  docker-release.yml
agent/websocket-reconnection-fix/: BLOG.md  EIGHTH-REVIEW-MESSAGE-VALIDATION-FIXES.md  FIFTH-REVIEW-FIXES.md  FOURTH-REVIEW-FIXES.md  NINTH-REVIEW-METRICS-AND-HEADERS.md  README.md  REVIEW-FIXES.md  SECOND-REVIEW-FIXES.md  SEVENTH-REVIEW-TEST-FLAKINESS-FIXES.md  SIXTH-REVIEW-SUBSCRIPTION-ID-FIX.md  TESTING-IMPROVEMENTS.md  THIRD-REVIEW-FIXES.md
docker/: docker-compose.yaml  vixy-integration.toml
docker/cl-mock/: nginx.conf
docs/: PRODUCTION-INCIDENT-2026-01-23.md
grafana/: README.md  vixy-dashboard.json
kurtosis/: network_params.yaml  vixy-kurtosis.toml  vixy-kurtosis.toml.template
scripts/: run-integration-tests.sh  setup-kurtosis.sh
src/: config.rs  lib.rs  main.rs  metrics.rs  monitor.rs  state.rs
src/health/: cl.rs  el.rs  mod.rs
src/proxy/: http.rs  mod.rs  selection.rs  ws.rs
tests/: cucumber.rs  integration_cucumber.rs  world.rs
tests/features/: cl_health.feature  config.feature  el_health.feature
tests/features/integration/: cl_proxy.feature  el_proxy.feature  health_monitoring.feature  wss_connection.feature
tests/steps/: cl_health_steps.rs  config_steps.rs  el_health_steps.rs  integration_steps.rs  mod.rs
