[package]
name = "vixy"
version = "0.1.2"
edition = "2024"
description = "A Rust proxy that monitors Ethereum EL and CL nodes, tracks their health, and routes requests to healthy nodes"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server (proxy)
axum = { version = "0.8", features = ["ws"] }

# HTTP client (health checks)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config parsing
toml = "0.8"
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
eyre = "0.6"

# WebSocket client for EL WS proxy
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TLS/Crypto provider for WebSocket connections
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# Prometheus metrics
prometric = "0.2"
prometric-derive = "0.2"
prometheus = "0.14"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# BDD testing framework
cucumber = "0.21"

# Mock HTTP server for testing
wiremock = "0.6"

# Async test utilities
tokio-test = "0.4"
futures = "0.3"

# Tower for testing axum handlers
tower = "0.5"

# HTTP client for integration tests (blocking for startup check)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[[test]]
name = "cucumber"
harness = false

[[test]]
name = "integration_cucumber"
harness = false
